--- a/VisualStudioProject/HolzToolsWPF/UserControls/Settings.xaml
+++ b/VisualStudioProject/HolzToolsWPF/UserControls/Settings.xaml
@@ -178,36 +178,6 @@
                 <Border Grid.Row="2" CornerRadius="4" Background="{DynamicResource CardBackground}"
                         Margin="0,10,0,0" Visibility="Collapsed" x:Name="devSettings">
                     <Grid>
-                        <Grid.Style>
-                            <Style TargetType="{x:Type Grid}">
-                                <Style.Triggers>
-                                    <DataTrigger Binding="{Binding Visibility, 
-                                    ElementName=rgbPropertiesStackPanel}" 
-                                         Value="Visible">
-                                        <DataTrigger.EnterActions>
-                                            <BeginStoryboard>
-                                                <Storyboard>
-                                                    <DoubleAnimation 
-                                                    Storyboard.TargetProperty="Height"
-                                                    From="125" To="153" Duration="0:0:0.1"
-                                                    FillBehavior="Stop"/>
-                                                </Storyboard>
-                                            </BeginStoryboard>
-                                        </DataTrigger.EnterActions>
-                                        <DataTrigger.ExitActions>
-                                            <BeginStoryboard>
-                                                <Storyboard>
-                                                    <DoubleAnimation 
-                                                    Storyboard.TargetProperty="Height"
-                                                    From="153" To="125" Duration="0:0:0.1"
-                                                    FillBehavior="Stop"/>
-                                                </Storyboard>
-                                            </BeginStoryboard>
-                                        </DataTrigger.ExitActions>
-                                    </DataTrigger>
-                                </Style.Triggers>
-                            </Style>
-                        </Grid.Style>
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="10"/>
                             <ColumnDefinition Width="*"/>
@@ -228,21 +198,25 @@
                                FontSize="16" FontWeight="SemiBold" Margin="0,0,0,5"/>
 
                         <CheckBox Grid.Row="2" Grid.Column="1" Foreground="White"
+                                  Content="Enable Dev-Mode" FontSize="14" Margin="5"
+                                  IsChecked="{Binding SelectedIsDev}"/>
+
+                        <CheckBox Grid.Row="3" Grid.Column="1" Foreground="White"
                                   Content="Enable logging"
                               FontSize="14" Margin="5"
                               IsChecked="{Binding SelectedEnableLogBox}"/>
 
-                        <CheckBox Grid.Row="3" Grid.Column="1" Foreground="White"
+                        <CheckBox Grid.Row="4" Grid.Column="1" Foreground="White"
                                   Content="Block Alerts"
                               FontSize="14" Margin="5"
                               IsChecked="{Binding SelectedBlockPopups}"/>
 
-                        <CheckBox Grid.Row="4" Grid.Column="1" Foreground="White"
+                        <CheckBox Grid.Row="5" Grid.Column="1" Foreground="White"
                                   Content="Automatically start BASS.Net"
                               FontSize="14" Margin="5"
                               IsChecked="{Binding SelectedStartBassNet}"/>
 
-                        <Grid Grid.Column="1" Grid.Row="5" Margin="5">
+                        <Grid Grid.Column="1" Grid.Row="6" Margin="5">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="auto"/>
                                 <ColumnDefinition Width="*"/>
