--- a/VisualStudioProject/HolzToolsWPF/UserControls/ArduinoUploadWindow.xaml
+++ b/VisualStudioProject/HolzToolsWPF/UserControls/ArduinoUploadWindow.xaml
@@ -21,6 +21,8 @@
             <Grid.RowDefinitions>
                 <RowDefinition Height="10"/>
                 <RowDefinition Height="auto"/>
+                <RowDefinition Height="auto"/>
+                <RowDefinition Height="auto"/>
                 <RowDefinition Height="10"/>
                 <RowDefinition Height="25"/>
                 <RowDefinition Height="10"/>
@@ -100,12 +102,120 @@
                             </controls:HelpToolTip.ToolTipText>
                         </controls:HelpToolTip>
                     </Grid>
-                    
                 </Grid>
             </Border>
 
+            <!-- Progress field -->
+            <Grid x:Name="progressGrid" Grid.Column="1" Grid.Row="2" 
+                  HorizontalAlignment="Center" Visibility="Collapsed" Margin="0,8,0,0">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="auto"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="auto"/>
+                </Grid.ColumnDefinitions>
+
+                <TextBlock FontFamily="Segoe MDL2 Assets"
+                           TextAlignment="Center" VerticalAlignment="Center"
+                           FontSize="17" Margin="0,0,5,0">
+                    <TextBlock.Style>
+                        <Style TargetType="TextBlock">
+                            <Setter Property="Visibility" Value="Collapsed"/>
+                            <Style.Triggers>
+                                <MultiDataTrigger>
+                                    <MultiDataTrigger.Conditions>
+                                        <Condition Binding="{Binding IsFlashing}" 
+                                                   Value="False" />
+                                        <Condition Binding="{Binding IsSuccessfull}" 
+                                                   Value="True" />
+                                    </MultiDataTrigger.Conditions>
+                                    <MultiDataTrigger.Setters>
+                                        <Setter Property="Visibility" Value="Visible" />
+                                        <Setter Property="Text" Value="&#xE73E;" />
+                                        <Setter Property="Foreground" Value="Lime" />
+                                    </MultiDataTrigger.Setters>
+                                </MultiDataTrigger>
+                                <MultiDataTrigger>
+                                    <MultiDataTrigger.Conditions>
+                                        <Condition Binding="{Binding IsFlashing}" 
+                                                   Value="False" />
+                                        <Condition Binding="{Binding IsSuccessfull}" 
+                                                   Value="False" />
+                                    </MultiDataTrigger.Conditions>
+                                    <MultiDataTrigger.Setters>
+                                        <Setter Property="Visibility" Value="Visible" />
+                                        <Setter Property="Text" Value="&#xE8BB;" />
+                                        <Setter Property="Foreground" Value="Red" />
+                                    </MultiDataTrigger.Setters>
+                                </MultiDataTrigger>
+                            </Style.Triggers>
+                        </Style>
+                    </TextBlock.Style>
+                </TextBlock>
+                <TextBlock Text="{Binding ProgressText}" Grid.Column="1" 
+                           Foreground="White" FontSize="14" />
+                <TextBlock Grid.Column="2" Margin="5,0,0,0"
+                           Foreground="White" FontSize="14">
+                    <TextBlock.Style>
+                        <Style TargetType="TextBlock">
+                            <Setter Property="Visibility" Value="Collapsed"/>
+                            <Setter Property="Text" Value="test"/>
+                            <Style.Triggers>
+                                <DataTrigger Binding="{Binding IsFlashing}" Value="True">
+                                    <DataTrigger.EnterActions>
+                                        <BeginStoryboard>
+                                            <Storyboard>
+                                                <StringAnimationUsingKeyFrames
+                                                    RepeatBehavior="Forever"
+                                                    Duration="0:0:2"
+                                                    Storyboard.TargetProperty="(TextBlock.Text)">
+                                                    <DiscreteStringKeyFrame 
+                                                        KeyTime="0:0:0" 
+                                                        Value=""/>
+                                                    <DiscreteStringKeyFrame 
+                                                        KeyTime="0:0:0.5" 
+                                                        Value="."/>
+                                                    <DiscreteStringKeyFrame 
+                                                        KeyTime="0:0:1" 
+                                                        Value=".."/>
+                                                    <DiscreteStringKeyFrame 
+                                                        KeyTime="0:0:1.5" 
+                                                        Value="..."/>
+                                                </StringAnimationUsingKeyFrames>
+                                            </Storyboard>
+                                        </BeginStoryboard>
+                                    </DataTrigger.EnterActions>
+                                    <Setter Property="Visibility" Value="Visible"/>
+                                </DataTrigger>
+                            </Style.Triggers>
+                        </Style>
+                    </TextBlock.Style>
+                </TextBlock>
+            </Grid>
+
+            <!-- Alert field -->
+            <Grid x:Name="alertGrid" Grid.Column="1" Grid.Row="3" 
+                  HorizontalAlignment="Center" Margin="0,8,0,0">
+                <Grid.Style>
+                    <Style TargetType="Grid">
+                        <Setter Property="Visibility" Value="Visible" />
+                        <Style.Triggers>
+                            <DataTrigger Binding="{Binding ErrorText}" Value="">
+                                <Setter Property="Visibility" Value="Collapsed" />
+                            </DataTrigger>
+                        </Style.Triggers>
+                    </Style>
+                </Grid.Style>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="auto"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="auto"/>
+                </Grid.ColumnDefinitions>
+
+                <TextBlock Text="{Binding ErrorText}" FontSize="14" Foreground="Red" />
+            </Grid>
+
             <!-- Buttons -->
-            <Grid Grid.Column="1" Grid.Row="3">
+            <Grid Grid.Column="1" Grid.Row="5">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="25"/>
@@ -115,9 +225,25 @@
                         Style="{StaticResource cancelBtnStyle}"
                         Content="Cancel" Click="CancelBtn_Click"/>
                 <Button Grid.Column="2" Grid.Row="3"
-                        Style="{StaticResource applyBtnStyle}"
-                        Content="Upload to Arduino" Click="FlashBtn_Click"
-                        IsEnabled="{Binding InputValid}"/>
+                        Content="Upload to Arduino" Click="FlashBtn_Click">
+                    <Button.Style>
+                        <Style TargetType="Button" BasedOn="{StaticResource applyBtnStyle}">
+                            <Setter Property="IsEnabled" Value="False"/>
+
+                            <Style.Triggers>
+                                <MultiDataTrigger>
+                                    <MultiDataTrigger.Conditions>
+                                        <Condition Binding="{Binding InputValid}" 
+                                               Value="True"/>
+                                        <Condition Binding="{Binding IsFlashing}" 
+                                               Value="False"/>
+                                    </MultiDataTrigger.Conditions>
+                                    <Setter Property="IsEnabled" Value="True"/>
+                                </MultiDataTrigger>
+                            </Style.Triggers>
+                        </Style>
+                    </Button.Style>
+                </Button>
             </Grid>
         </Grid>
     </Border>
