--- a/VisualStudioProject/HolzToolsWPF/NewUpdateWindow.xaml
+++ b/VisualStudioProject/HolzToolsWPF/NewUpdateWindow.xaml
@@ -86,7 +86,7 @@
                                  ItemsSource="{Binding FixList}">
                             <ItemsControl.ItemTemplate>
                                 <DataTemplate>
-                                    <Grid>
+                                    <Grid Margin="0,3,0,3">
                                         <Grid.ColumnDefinitions>
                                             <ColumnDefinition Width="20"/>
                                             <ColumnDefinition Width="*"/>
@@ -99,7 +99,7 @@
                                        FontWeight="Bold"/>
                                         <TextBlock Text="{Binding}" Grid.Column="1" Foreground="White"
                                        TextWrapping="WrapWithOverflow" 
-                                       MaxWidth="300"/>
+                                       MaxWidth="335"/>
 
                                     </Grid>
                                 </DataTemplate>
@@ -122,7 +122,7 @@
                              ItemsSource="{Binding FeatureList}">
                             <ItemsControl.ItemTemplate>
                                 <DataTemplate>
-                                    <Grid>
+                                    <Grid Margin="0,3,0,3">
                                         <Grid.ColumnDefinitions>
                                             <ColumnDefinition Width="20"/>
                                             <ColumnDefinition Width="*"/>
@@ -158,7 +158,7 @@
                              ItemsSource="{Binding OptimizeList}">
                             <ItemsControl.ItemTemplate>
                                 <DataTemplate>
-                                    <Grid>
+                                    <Grid Margin="0,3,0,3">
                                         <Grid.ColumnDefinitions>
                                             <ColumnDefinition Width="20"/>
                                             <ColumnDefinition Width="*"/>
