Fixes and optimization in the ESP32/Arduino firmware and Android version

--- a/AndroidStudioProject/HolzToolsMobile/app/src/main/res/menu/menu_drawer.xml
+++ b/AndroidStudioProject/HolzToolsMobile/app/src/main/res/menu/menu_drawer.xml
@@ -13,6 +13,12 @@
 
     <group android:id="@+id/menuMiscGroup">
         <item
+            android:id="@+id/menuConfigureEsp"
+            android:icon="@drawable/ic_configure"
+            android:iconTint="@color/colorPrimaryText"
+            android:title="Configure ESP"
+            android:orderInCategory="2" />
+        <item
             android:id="@+id/menuSettings"
             android:icon="@drawable/ic_settings"
             android:iconTint="@color/colorPrimaryText"
