Added support for ESP32 in desktop application

--- a/VisualStudioProject/HolzToolsWPF/UserControls/LedItemProperties.xaml
+++ b/VisualStudioProject/HolzToolsWPF/UserControls/LedItemProperties.xaml
@@ -140,13 +140,12 @@
                         </Grid.ColumnDefinitions>
                         
                         <CheckBox  x:Name="isNetworkCB" Content="Is connected to network"
-                               FontSize="14" Margin="5" IsEnabled="False"
+                               FontSize="14" Margin="5"
                                IsChecked="{Binding SelectedIsNetwork}"/>
 
                         <controls:HelpToolTip Grid.Column="1">
                             <controls:HelpToolTip.ToolTipText>
-                                Check this if your Arduino is connected to your network 
-                                via an ESP8266. (Currently unavailable, will come in future versions)
+                                Check this if you have an ESP32 that is connected to your network.
                             </controls:HelpToolTip.ToolTipText>
                         </controls:HelpToolTip>
                     </Grid>
